--- a/.github/workflows/Manually_build_executable_programs.yml
+++ b/.github/workflows/Manually_build_executable_programs.yml
@@ -32,7 +32,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           echo "DATE=$(Get-Date -Format 'yyyyMMdd')" >> $env:GITHUB_ENV
-          pyinstaller --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
+          pyinstaller --noconsole --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
         shell: pwsh
 
       - name: 构建 Mac 可执行文件
