--- a/.github/workflows/Release_build_executable_program.yml
+++ b/.github/workflows/Release_build_executable_program.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 构建 Win 可执行文件
         if: runner.os == 'Windows'
         run: |
-          pyinstaller --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
+          pyinstaller --noconsole --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
         shell: pwsh
 
       - name: 构建 Mac 可执行文件
