--- a/.github/workflows/Release_build_executable_program.yml
+++ b/.github/workflows/Release_build_executable_program.yml
@@ -10,11 +10,8 @@ permissions:
 
 jobs:
   build:
-    name: 构建于 ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ windows-latest, windows-11-arm, macos-15-intel, macos-latest ]
+    name: 构建于 Windows
+    runs-on: windows-latest
 
     steps:
       - name: 签出存储库
@@ -32,15 +29,9 @@ jobs:
           pip install pyinstaller
 
       - name: 构建 Win 可执行文件
-        if: runner.os == 'Windows'
         run: |
           pyinstaller --noconsole --uac-admin --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
         shell: pwsh
-
-      - name: 构建 Mac 可执行文件
-        if: runner.os == 'macOS'
-        run: |
-          pyinstaller --icon=./static/images/DouK-Downloader.icns --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
 
       - name: 创建压缩包
         run: |
