--- a/.github/workflows/Manually_build_executable_programs.yml
+++ b/.github/workflows/Manually_build_executable_programs.yml
@@ -13,6 +13,21 @@ jobs:
     steps:
       - name: 签出存储库
         uses: actions/checkout@v4
+        with:
+          submodules: false
+
+      - name: 设置 Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: webui/package-lock.json
+
+      - name: 构建 WebUI
+        run: |
+          cd webui
+          npm ci
+          npm run build
 
       - name: 设置 Python
         uses: actions/setup-python@v5
@@ -28,14 +43,14 @@ jobs:
       - name: 构建可执行文件
         run: |
           echo "DATE=$(Get-Date -Format 'yyyyMMdd')" >> $env:GITHUB_ENV
-          pyinstaller --noconsole --uac-admin --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
+          pyinstaller --noconsole --name "禾风起工具箱" --icon=./static/images/DouK-Downloader.ico --add-data "static;static" --add-data "locale;locale" --collect-all emoji main.py
         shell: pwsh
 
       - name: 上传文件
         uses: actions/upload-artifact@v4
         with:
-          name: DouK-Downloader_Windows_${{ runner.arch }}_${{ env.DATE }}
-          path: dist/main/
+          name: 禾风起工具箱_Windows_${{ runner.arch }}_${{ env.DATE }}
+          path: dist/禾风起工具箱/
 
   build_matrix_manual:
     name: 构建 (手动 / ${{ matrix.os }})
@@ -58,6 +73,21 @@ jobs:
     steps:
       - name: 签出存储库
         uses: actions/checkout@v4
+        with:
+          submodules: false
+
+      - name: 设置 Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: webui/package-lock.json
+
+      - name: 构建 WebUI
+        run: |
+          cd webui
+          npm ci
+          npm run build
 
       - name: 设置 Python
         uses: actions/setup-python@v5
@@ -74,17 +104,17 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           echo "DATE=$(Get-Date -Format 'yyyyMMdd')" >> $env:GITHUB_ENV
-          pyinstaller --noconsole --uac-admin --icon=./static/images/DouK-Downloader.ico --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
+          pyinstaller --noconsole --name "禾风起工具箱" --icon=./static/images/DouK-Downloader.ico --add-data "static;static" --add-data "locale;locale" --collect-all emoji main.py
         shell: pwsh
 
       - name: 构建 Mac 可执行文件
         if: runner.os == 'macOS'
         run: |
           echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
-          pyinstaller --icon=./static/images/DouK-Downloader.icns --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
+          pyinstaller --name "禾风起工具箱" --icon=./static/images/DouK-Downloader.icns --add-data "static:static" --add-data "locale:locale" --collect-all emoji main.py
 
       - name: 上传文件
         uses: actions/upload-artifact@v4
         with:
-          name: DouK-Downloader_${{ runner.os }}_${{ runner.arch }}_${{ env.DATE }}
-          path: dist/main/
+          name: 禾风起工具箱_${{ runner.os }}_${{ runner.arch }}_${{ env.DATE }}
+          path: dist/禾风起工具箱/
